Move hardcoded strings to labels

--- a/force-app/main/default/aura/AccountSettings/AccountSettings.cmp
+++ b/force-app/main/default/aura/AccountSettings/AccountSettings.cmp
@@ -129,7 +129,8 @@
                             <div class="as-email-preference">
                                 <div class="as-title ">Conditions of Interest</div>
                                 <div class="as-sub-title">
-                                    Select up to 5 medical conditions that you would be interested in for participating in a clinical trial.
+                                    Select up to 5 medical conditions that you would be interested in for participating
+                                    in a clinical trial.
                                 </div>
                                 <div class="slds-grid slds-wrap slds-p-top--medium">
                                     <c:ConditionOfInterestListView/>
@@ -144,18 +145,12 @@
             <!-- Cookies settings -->
             <div class="rr-white-panel" style="padding: 0 30px 30px 30px;">
                 <div class="as-email-preference">
-                    <div class="as-title">Cookie Settings</div>
+                    <div class="as-title">{!$Label.c.AccountSettings_Cookie_Settings}</div>
                     <div class="as-sub-title"
-                         style="margin-bottom: 15px">Some essential features on Referral Hub site just won’t work
-                        without cookies.
-                        And having other cookies switched off can seriously affect the way you’ll be able to enjoy our
-                        services.
-                        Please check your cookie settings below and turn on any cookies you’re happy with.
-                        "Strictly necessary" cookies can’t be turned off.
-                        However "Functional" cookies can be turned on or off below.
+                         style="margin-bottom: 15px">{!$Label.c.AccountSettings_Cookie_Description}
                     </div>
                     <div class="collapse-section slds-m-top--large">
-                        <c:RRCollapse label="Strictly Necessary Cookies" isCollapsed="true">
+                        <c:RRCollapse label="{!$Label.c.AccountSettings_Strictly_Necessary_Cookies}" isCollapsed="true">
                             <div class="ah-main-container slds-grid slds-wrap slds-m-top--large">
                                 <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap">
                                     <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap ah-section">
@@ -174,15 +169,14 @@
                     </div>
 
                     <div class="collapse-section slds-m-top--large">
-                        <c:RRCollapse label="Functional Cookies" isCollapsed="true">
+                        <c:RRCollapse label="{!$Label.c.AccountSettings_Functional_Cookies}" isCollapsed="true">
                             <div class="ah-main-container slds-grid slds-wrap slds-m-top--large">
                                 <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap">
                                     <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap ah-section">
                                         <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap ah-item-panel">
                                             <div class="slds-col slds-size--2-of-3 slds-medium-size--6-of-7">
-                                                <div class="ah-item-label">RRCookies</div>
-                                                <div class="ah-item-sublabel">Used to store cookies agreement decision.
-                                                    It prevents from popup appearing several times.
+                                                <div class="ah-item-label">{!$Label.c.AccountSettings_Functional_RRCookies}</div>
+                                                <div class="ah-item-sublabel">{!$Label.c.AccountSettings_RRCookies_Description}
                                                 </div>
                                             </div>
                                             <div class="slds-col slds-size--1-of-3 slds-medium-size--1-of-7 ah-toggle-container">
@@ -197,8 +191,8 @@
                                         </div>
                                         <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap ah-item-panel">
                                             <div class="slds-col slds-size--2-of-3 slds-medium-size--6-of-7">
-                                                <div class="ah-item-label">RRLanguage</div>
-                                                <div class="ah-item-sublabel">Used to store user preferred language.
+                                                <div class="ah-item-label">{!$Label.c.AccountSettings_Cookies_RRLanguage}</div>
+                                                <div class="ah-item-sublabel">{!$Label.c.AccountSettings_Cookies_RRLanguage_Description}
                                                 </div>
                                             </div>
                                             <div class="slds-col slds-size--1-of-3 slds-medium-size--1-of-7 ah-toggle-container">
@@ -224,21 +218,19 @@
             <aura:if isTrue="{!v.userMode == 'HCP'}">
                 <div class="rr-white-panel" style="padding: 0 30px 30px 30px;">
                     <div class="as-email-preference">
-                        <div class="as-title">Referral Networks</div>
+                        <div class="as-title">{!$Label.c.AccountSettings_Referral_Networks}</div>
                         <div class="as-sub-title">
-                            Subscribe to Referral Networks. You will receive weekly emails keeping you updated on sites
-                            or topics that you are interested in.
+                            {!$Label.c.AccountSettings_Referral_Networks_Description}
                         </div>
 
                         <div class="as-sub-title slds-m-top--medium">
-                            Site Based
+                            {!$Label.c.AccountSettings_Referral_Networks_Site_Based}
                         </div>
                         <div class="slds-grid slds-wrap slds-p-top--small">
                             <c:SubscribeToReferralNetwork sObjectType="Referral_Network__c"/>
                         </div>
-
                         <div class="as-sub-title slds-m-top--x-large">
-                            Topic Based
+                            {!$Label.c.AccountSettings_Referral_Networks_Topic_Based}
                         </div>
                         <div class="slds-grid slds-wrap slds-p-top--small">
                             <c:SubscribeToReferralNetwork sObjectType="Therapeutic_Area__c"/>
@@ -370,7 +362,8 @@
                                        disabled="true"/>
                         </div>
                         <div class="slds-col slds-size_1-of-1  slds-medium-size_4-of-12">
-                            <button class="apollo-btn primary as-submit-button" onclick="{!c.doUpdateParticipant}">{!$Label.c.Update_Participant}</button>
+                            <button class="apollo-btn primary as-submit-button"
+                                    onclick="{!c.doUpdateParticipant}">{!$Label.c.Update_Participant}</button>
                         </div>
                     </aura:if>
                 </div>
