Primary Contact Removed and My Patient Fix

--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
@@ -21,8 +21,7 @@
                         {!v.studySiteWrapper.site.Name}
                 </div>
                 <div class="ssi-pi-name">
-                        {!empty(v.studySiteWrapper.site.Primary_Contact__c)?v.studySiteWrapper.site.Principal_Investigator__r.Salutation + ' ' + v.studySiteWrapper.site.Principal_Investigator__r.Name:
-                                v.studySiteWrapper.site.Primary_Contact__r.Salutation + ' ' + v.studySiteWrapper.site.Primary_Contact__r.Name}
+                        {!v.studySiteWrapper.site.Principal_Investigator__r.Salutation + ' ' + v.studySiteWrapper.site.Principal_Investigator__r.Name}
                 </div>
             </div>
             <div class="slds-col slds-size--1-of-1 slds-medium-size--1-of-3">
@@ -39,18 +38,14 @@
                 <aura:if isTrue="{!v.studySiteWrapper.siteType!='Virtual'}">
                     <div class="ssi-address">
                     {!(!empty(v.studySiteWrapper.site.Site__r.BillingAddress))?v.studySiteWrapper.site.Site__r.BillingStreet:
-                            empty(v.studySiteWrapper.site.Primary_Contact__c)?v.studySiteWrapper.site.Principal_Investigator__r.MailingStreet:
-                                    v.studySiteWrapper.site.Primary_Contact__r.MailingStreet}
+                            v.studySiteWrapper.site.Principal_Investigator__r.MailingStreet}
                         <br/>
                             {!(!empty(v.studySiteWrapper.site.Site__r.BillingAddress))?v.studySiteWrapper.site.Site__r.BillingCity:
-                                    empty(v.studySiteWrapper.site.Primary_Contact__c)?v.studySiteWrapper.site.Principal_Investigator__r.MailingCity:
-                                            v.studySiteWrapper.site.Primary_Contact__r.MailingCity},
+                                    v.studySiteWrapper.site.Principal_Investigator__r.MailingCity},
                             {!(!empty(v.studySiteWrapper.site.Site__r.BillingAddress))?v.studySiteWrapper.site.Site__r.BillingStateCode:
-                                    empty(v.studySiteWrapper.site.Primary_Contact__c)?v.studySiteWrapper.site.Principal_Investigator__r.MailingStateCode:
-                                            v.studySiteWrapper.site.Primary_Contact__r.MailingStateCode},
+                                    v.studySiteWrapper.site.Principal_Investigator__r.MailingStateCode},
                             {!(!empty(v.studySiteWrapper.site.Site__r.BillingAddress))?v.studySiteWrapper.site.Site__r.BillingPostalCode:
-                                    empty(v.studySiteWrapper.site.Primary_Contact__c)?v.studySiteWrapper.site.Principal_Investigator__r.MailingPostalCode:
-                                            v.studySiteWrapper.site.Primary_Contact__r.MailingPostalCode}
+                                    v.studySiteWrapper.site.Principal_Investigator__r.MailingPostalCode}
                     </div>
                 </aura:if>
             </div>
