--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -211,7 +211,7 @@
                                     </div>
                                 </div>
                                 <div class="slds-grid slds-wrap slds-m-top--x-small">
-                                    <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12">
+                                    <div class="slds-col slds-size_1-of-1 slds-medium-size_7-of-12">
                                     <div class="site-address">
                                             {!siteWrapper.site.Principal_Investigator__r.MailingStreet}
                                     </div>
@@ -219,17 +219,17 @@
                                             {!(siteWrapper.site.Principal_Investigator__r.MailingCity + ' ' + siteWrapper.site.Principal_Investigator__r.MailingState + ' ' + siteWrapper.site.Principal_Investigator__r.MailingPostlCode)}
                                     </div>
                                     </div>
-                                    <div class="slds-col slds-show_medium slds-size_1-of-12">
-                                        <div style="width: 1px; background-color: gray; height: 55px; margin-left: 50px;"></div>
-                                    </div>
-                                    <div class="slds-col slds-m-vertical_small slds-hide_medium slds-size_1-of-2">
-                                        <div style="height: 1px; background-color: gray; "></div>
-                                    </div>
-                                    <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
-                                    <div class="site-address">{!siteWrapper.site.Principal_Investigator__r.Name}</div>
-                                    <div class="site-address slds-m-top--xx-small">{!siteWrapper.site.Principal_Investigator__r.Phone}</div>
-                                    <div class="site-address slds-m-top--xx-small">{!siteWrapper.site.Principal_Investigator__r.Email}</div>
-                                    </div>
+<!--                                    <div class="slds-col slds-show_medium slds-size_1-of-12">-->
+<!--                                        <div style="width: 1px; background-color: gray; height: 55px; margin-left: 50px;"></div>-->
+<!--                                    </div>-->
+<!--                                    <div class="slds-col slds-m-vertical_small slds-hide_medium slds-size_1-of-2">-->
+<!--                                        <div style="height: 1px; background-color: gray; "></div>-->
+<!--                                    </div>-->
+<!--                                    <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12">-->
+<!--                                    <div class="site-address">{!siteWrapper.site.Principal_Investigator__r.Name}</div>-->
+<!--                                    <div class="site-address slds-m-top&#45;&#45;xx-small">{!siteWrapper.site.Principal_Investigator__r.Phone}</div>-->
+<!--                                    <div class="site-address slds-m-top&#45;&#45;xx-small">{!siteWrapper.site.Principal_Investigator__r.Email}</div>-->
+<!--                                    </div>-->
                                     <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12 slds-m-top--x-large">
                                         <div class="slds-grid slds-wrap slds-gutters" style="text-align: right;">
                                             <aura:if isTrue="{!not(and(siteWrapper.actions.refer.disabled,siteWrapper.actions.refer.disableReason==
