--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -67,6 +67,12 @@
                     </div>
                     <div class="{!'collapse-section ' + if(v.detailCollapsed, '', ' opened')}">
                         <c:RRCollapse label="{!$Label.c.PE_Details}" isCollapsed="{!v.detailCollapsed}">
+                            <aura:if isTrue="{!v.userMode == 'HCP'}">
+                                <div class="vpi-refid-field">
+                                    <div class="label">{!$Label.c.PE_Referral_Id}</div>
+                                    <div class="value">{!v.pe.Referral_ID__c}</div>
+                                </div>
+                            </aura:if>
                             <c:PatientStatusPathDetail aura:id="statusDetail" pathItems="{!v.pathItems}" peId="{!v.pe.Id}"/>
                         </c:RRCollapse>
                     </div>
