add space / line break between paragraphs for articles is #13 cleanup story.

--- a/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
+++ b/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
@@ -105,6 +105,10 @@
     margin-bottom: 16px;
 }
 
+.THIS span > p {
+    padding-bottom: 14px;
+}
+
 .THIS .resource-title {
     color: #666666;
     font-family: "Proxima Nova";
