--- a/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.css
+++ b/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.css
@@ -24,6 +24,7 @@
     height: 170px;
     overflow-x: hidden;
     overflow-y: auto;
+    margin-top: 5px;
 }
 
 @media all and (max-width: 750px) {
