--- a/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
+++ b/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
@@ -30,7 +30,7 @@
                 <aura:iteration items="{!v.displayedItems}" var="coiWrapper">
                     <tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent"
                         tabindex="0">
-                        <td class="slds-text-align_right" role="gridcell">
+                        <td class="slds-text-align_right" role="gridcell" style="width: 1.25rem;">
                             <div class="slds-checkbox">
                                 <lightning:input label="" type="checkbox" checked="{!coiWrapper.isSelected}"
                                                  value="{!coiWrapper}" onchange="{!c.handleChange}"/>
