--- a/force-app/main/default/layouts/Resource__c-Video.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Video.layout-meta.xml
@@ -200,11 +200,16 @@
         <relatedList>Resource_Version__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
-        <fields>NAME</fields>
+        <fields>Therapeutic_Area__c.NAME</fields>
+        <fields>Therapeutic_Area__c.CUST_RECORDTYPE</fields>
+        <fields>Therapeutic_Area__c.Type__c</fields>
         <relatedList>Therapeutic_Area_Assignment__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
-        <fields>NAME</fields>
+        <fields>Clinical_Trial_Profile__c.NAME</fields>
+        <fields>Clinical_Trial_Profile__c.Status__c</fields>
+        <fields>Clinical_Trial_Profile__c.Study_Type__c</fields>
+        <fields>Clinical_Trial_Profile__c.Study_Title__c</fields>
         <relatedList>Res_study__c.Resource__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
@@ -213,7 +218,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h9E000000qQ4L</masterLabel>
+        <masterLabel>00h4E000000gIbb</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
