--- a/force-app/main/default/layouts/Therapeutic_Area__c-Therapeutic Area Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Therapeutic_Area__c-Therapeutic Area Layout.layout-meta.xml
@@ -57,13 +57,19 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>NAME</fields>
+        <fields>RECORDTYPE</fields>
+        <fields>Type__c</fields>
+        <relatedList>Therapeutic_Area__c.Therapeutic_Area__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hS0000001Az25</masterLabel>
+        <masterLabel>00h4E000000gIbc</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
