--- a/force-app/main/default/layouts/Resource__c-Study Document.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Study Document.layout-meta.xml
@@ -50,7 +50,10 @@
         <style>CustomLinks</style>
     </layoutSections>
     <relatedLists>
-        <fields>NAME</fields>
+        <fields>Clinical_Trial_Profile__c.NAME</fields>
+        <fields>Clinical_Trial_Profile__c.Status__c</fields>
+        <fields>Clinical_Trial_Profile__c.Study_Type__c</fields>
+        <fields>Clinical_Trial_Profile__c.Study_Title__c</fields>
         <relatedList>Res_study__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
@@ -62,7 +65,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h9E000000qQ4K</masterLabel>
+        <masterLabel>00h4E000000gIba</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
