--- a/force-app/main/default/aura/LoginThemeLayout/LoginThemeLayout.cmp
+++ b/force-app/main/default/aura/LoginThemeLayout/LoginThemeLayout.cmp
@@ -19,7 +19,14 @@
                 <div class="logo-block">
                     <div class="login-title">{!v.translatedTitle}</div>
                     <div class="login-sub-title">{!v.translatedSubTitle}</div>
-                    <img src="{!$Resource.rr_community_icons + '/logo_3x.png'}" class="main-logo"/>
+                    <div class="rr-small-down-hide slds-grid slds-wrap slds-gutters">
+                        <div class="slds-col slds-size--1-of-1 slds-medium-size--1-of-2">
+                            <img src="{!$Resource.rr_community_icons + '/rh_logo_subt.svg'}" class="main-logo"/>
+                        </div>
+                        <div class="slds-col slds-size--1-of-1 slds-medium-size--1-of-2">
+                            <img src="{!$Resource.PH_logo + '/pp_logo_subt.svg'}" class="main-logo"/>
+                        </div>
+                    </div>
                 </div>
                 <div class="body-content">
                     <div class="body-components">{!v.body}</div>
