--- a/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
@@ -5,7 +5,7 @@
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
         <editHeading>true</editHeading>
-        <label>Descriptive Information</label>
+        <label>Study Identifiers</label>
         <layoutColumns>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -16,9 +16,24 @@
                 <field>Protocol_ID__c</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Study_Code_Name__c</field>
+            </layoutItems>
+        </layoutColumns>
+        <layoutColumns>
+            <layoutItems>
                 <behavior>Required</behavior>
                 <field>Study_Title__c</field>
             </layoutItems>
+        </layoutColumns>
+        <style>TwoColumnsLeftToRight</style>
+    </layoutSections>
+    <layoutSections>
+        <customLabel>true</customLabel>
+        <detailHeading>true</detailHeading>
+        <editHeading>true</editHeading>
+        <label>Descriptive Information</label>
+        <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Brief_Summary__c</field>
@@ -127,10 +142,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Link_to_Pre_screening__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Study_Code_Name__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -431,33 +442,13 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <fields>Start_Date__c</fields>
-        <fields>Current_Primary_Outcome_Measures__c</fields>
-        <fields>Estimated_Primary_Completion_Date__c</fields>
-        <relatedList>Tracking_Information__c.Clinical_Trial_Profile__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
-        <fields>Intervention_Type__c</fields>
-        <fields>Dose__c</fields>
-        <relatedList>Drug_Usage__c.Clinical_Trial_Profile__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
-        <fields>HCP__c</fields>
-        <fields>PI__c</fields>
-        <fields>HCP_outreach_Status__c</fields>
-        <fields>Comments__c</fields>
-        <relatedList>CTE__c.Clinical_Trial_Profile__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
         <fields>HCP_Contact__c</fields>
-        <fields>PI__c</fields>
-        <fields>Relative_Score__c</fields>
-        <relatedList>Score__c.Clinical_Trial_Profile__c</relatedList>
-        <sortField>Relative_Score__c</sortField>
-        <sortOrder>Desc</sortOrder>
+        <fields>Status__c</fields>
+        <relatedList>HCP_Enrollment__c.Clinical_Trial_Profile__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Participant_Enrollment__c.Clinical_Trial_Profile__c</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
@@ -466,22 +457,13 @@
     <relatedLists>
         <relatedList>RelatedEntityHistoryList</relatedList>
     </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
-        <fields>HCP_Contact__c</fields>
-        <relatedList>HCP_Enrollment__c.Clinical_Trial_Profile__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
-        <relatedList>Participant_Enrollment__c.Clinical_Trial_Profile__c</relatedList>
-    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0E0000019sEI</masterLabel>
+        <masterLabel>00h2D000000M2I9</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
